package colliders.updateables;

import entities.updateables.Bouncer;

public interface BouncerCollider extends MovableEntityCollider {
    public Bouncer getEntity();
}
