package entities.updateables.powerups;

import entities.updateables.MovableEntity;

public interface PowerUp extends MovableEntity {
    public static final String SOUND = "powerup.wav";
}
